--- a/instagram-client/src/main/resources/templates/index.html
+++ b/instagram-client/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
 
     <title>Verķu Viktorīna</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <link rel="stylesheet" href="static/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
