Duel style updates

--- a/instagram-client/src/main/resources/templates/duel.html
+++ b/instagram-client/src/main/resources/templates/duel.html
@@ -12,7 +12,7 @@
         gtag('config', 'G-KSSREM4RMB');
     </script>
 
-    <title>Verķu Viktorīna</title>
+    <title>Duelis</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -25,7 +25,7 @@
 <body>
 <div class="container">
     <div class="headers">
-        <img class="title_image" src="/static/vv.png">
+        <img class="title_image" src="/static/duel.png">
         <h4 th:text="${seriesTitle}"/>
     </div>
 
