--- a/instagram-client/src/main/resources/templates/quiz.html
+++ b/instagram-client/src/main/resources/templates/quiz.html
@@ -54,7 +54,7 @@
 
             <li id="leaderboard" class="list-group-item" th:each="participant: ${participant.value}">
                 <div>
-                    <img th:src="${participant.pictureUrl}"  class="rounded-circle profile_picture">
+                    <img th:src="${'/ig-images/' + participant.username}"  class="rounded-circle profile_picture">
                 </div>
                 <div>
                     <h6 class="full_name" th:text="${ participant.fullName == null || !participant.fullName.equals('') ? participant.fullName : participant.username }"/>
