--- a/instagram-client/src/main/resources/templates/quiz.html
+++ b/instagram-client/src/main/resources/templates/quiz.html
@@ -34,7 +34,7 @@
                 <div class="col">
                     <h1 style="color: deeppink">♀</h1>
                     <h6>Dāmas</h6>
-                    <label><div class="badge badge-success" th:text="${leaderboard.femaleCount + ' punkti'}"/></label>
+                    <label><div class="badge badge-light" th:text="${leaderboard.femaleCount + ' punkti'}"/></label>
                 </div>
 
                 <div class="col">
