--- a/instagram-client/src/main/resources/static/style.css
+++ b/instagram-client/src/main/resources/static/style.css
@@ -42,5 +42,10 @@
 }
 
 .leader-group {
-    margin-bottom: 20px;
+    margin-bottom: 20pt;
+}
+
+.v-alert-warning {
+    margin-top: 20pt;
+    text-align: center;
 }
