Grid profile picture size incresed

--- a/instagram-client/src/main/resources/static/style.css
+++ b/instagram-client/src/main/resources/static/style.css
@@ -19,6 +19,11 @@
     height: 37pt;
 }
 
+.grid_picture {
+    width: 55pt;
+    height: 55pt;
+}
+
 .place {
     position: absolute;
     margin-top: -13pt;
