--- a/instagram-client/src/main/resources/templates/grid.html
+++ b/instagram-client/src/main/resources/templates/grid.html
@@ -15,13 +15,10 @@
 <div class="container">
 
     <table style="height:100%;width:100%; position: absolute; top: 0; bottom: 0; left: 0; right: 0;border:0px; padding-left: 20px; padding-right: 20px">
-        <th th:style="${'height: ' + 100/(result.size()+2) + '%;'}">
-            <td></td>
-        </th>
-        <tr th:each="chunk: ${result}" th:style="${'height: ' + 100/(result.size()+2) + '%;'}">
+        <tr th:each="chunk: ${result}" th:style="${'height: ' + 100/(result.size()+1) + '%;'}">
             <td th:each="participant: ${chunk}">
                 <div style="text-align: center">
-                    <img th:src="${'/ig-images/' + participant.username}"  class="rounded-circle profile_picture" onerror="this.onerror=null; this.src='/static/default_profile.jpeg'">
+                    <img th:src="${'/ig-images/' + participant.username}"  class="rounded-circle grid_picture" onerror="this.onerror=null; this.src='/static/default_profile.jpeg'">
                 </div>
             </td>
         </tr>
