Profile picture downloading on the fly added

--- a/instagram-client/src/main/resources/static/style.css
+++ b/instagram-client/src/main/resources/static/style.css
@@ -20,8 +20,15 @@
 }
 
 .grid_picture {
-    width: 55pt;
-    height: 55pt;
+    width: 65pt;
+    height: 65pt;
+    box-sizing: border-box;
+    border: 3px white solid;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+    transform: translatey(0px);
+    animation: float 6s ease-in-out infinite;
 }
 
 .place {
