Title image updated

--- a/instagram-client/src/main/resources/templates/series.html
+++ b/instagram-client/src/main/resources/templates/series.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="headers">
-            <img class="title_image" src="/static/poker.png">
+            <img class="title_image" src="/static/vv.png">
             <h4 th:text="${seriesTitle}"/>
         </div>
 
